	======== 2.5.2 ============
2005-03-05  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Bump version number and change date.

	* pygtk-introduction (Major Changes) Update description with new
	GTK+ 2.6 classes and add gtk.glade module.

2005-02-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkcursor.xml (gtk.gdk.Cursor): Rephrase constructor
	descriptions to clarify how to make an invisible cursor. Fixes #168755
	(get_display) Fix mangled description.

2005-02-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderertext.xml (Properties): Add GTK+ 2.6
	properties ellipsize, ellipsize-set, width-chars. Alphabetize entries.
	Fixes #167504 (Rafael Villar Burke)

2005-02-03  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkcellrenderer.xml (stop_editing, "editing-started"):
	Add descriptions of these PyGTK 2.6 additions.

2005-01-18  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref-xml: Add pygtk-glade-classes.xml. Change date.

	* pygtk-glade-classes.xml
	* pygtk-gladexml.xml: Add these files created by Johan Dahlin.

	* pygtk-gladexml-classes.xml: Remove.

2005-01-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkentrycompletion.xml (get_text_column): Remove unimplemented
	method.
	(insert-prefix): Add description of PyGTK2.6 method.

2005-01-13  John Finlay  <finlay@moeraki.com>

	* pygtk-gtklabel.xml (get_angle, set_angle, set_max_width_chars)
	(get_max_width_chars): Add descriptions of these PyGTK 2.6 methods.
	("angle", "max-width-chars"): Add descriptions.

	* pygtk-gtk-functions.xml (gtk.get_current_event)
	(gtk.get_current_event_state): Add descriptions of these PyGTK2.6
	functions.

	* pygtk-gdkpixmap.xml
	* pygtk-gdk-functions.xml (gtk.pixmap_colormap_create_from_xpm)
	(gtk.pixmap_colormap_create_from_xpm_d)
	(gtk.pixmap_colormap_from_xpm_d):
	First arg can be a GdkDrawable.

	* pygtk-gtkcontainer.xml (gtk.container_class_install_child_property):
	Add description of this PyGTK2.4 function. Update Description.
