@@ -350,7 +350,12 @@ linkend="method-gtkcalendar--freeze"><methodname>freeze</methodname>()</link>
 method, and 'thawed' again using the <link
 linkend="method-gtkcalendar--freeze"><methodname>thaw</methodname>()</link>
 method.</para>
-
+    
+    <note>
+      <para>Note that month is zero-based (i.e it allowed values are 0-11) while selected_day 
+      is one-based (i.e. allowed values are 1-31).</para>
+    </note>
+    
   </refsect1>
 
   <refsect1 id="constructor-gtkcalendar">
@@ -678,6 +683,11 @@ day</simpara></listitem>
       <para>The <methodname>get_date</methodname>() method retrieves the
 calendar's current year, month and selected day numbers as a tuple (year,
 month, day).</para>
+    
+    <note>
+      <para>Note that month is zero-based (i.e it allowed values are 0-11) while selected_day 
+      is one-based (i.e. allowed values are 1-31).</para>
+    </note>
 
     </refsect2>
 
