@@ -4,10 +4,10 @@
 ]>
 <book id="pygtk-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
-    <pubdate>March 5, 2005</pubdate>
+    <pubdate>March 31, 2005</pubdate>
     <title>PyGTK 2.0 Reference Manual</title>
     <edition>PyGTK Reference Manual version 2.5.2 for PyGTK 2.5.x</edition>
-    <releaseinfo>Version 2.5.2</releaseinfo>
+    <releaseinfo>Version 2.5.3</releaseinfo>
     <authorgroup>
       <author>
 	<firstname>John</firstname>
