@@ -1,3 +1,10 @@
+2005-03-31  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkcalendar.xml (Description, get_date): Add note about
+	month value starting at zero. Patch by Gian Mario Tagliaretti.
+
+	* pygtk2-ref.xml: Bump version number and change date.
+
 	======== 2.5.2 ============
 2005-03-05  John Finlay  <finlay@moeraki.com>
 
